--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<div class="header__menu">
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li><a href="" class="menu__link" >Biletium</a></li>
-					<li><a href="" class="menu__link">Услуги</a></li>
-					<li><a href="" class="menu__link">Партнеры</a></li>
-					<li><a href="" class="menu__link">Преимущества</a></li>
-					<li><a href="" class="menu__link">Клиенты</a></li>
-					<li><a href="" class="menu__link">Контакты</a></li>
+					<li><a data-goto=".skills-goto" href="#" class="menu__link" >Biletium</a></li>
+					<li><a data-goto=".services-goto" href="#" class="menu__link">Услуги</a></li>
+					<li><a data-goto=".partners-goto" href="#" class="menu__link">Партнеры</a></li>
+					<li><a data-goto=".advantage-goto" href="#" class="menu__link">Преимущества</a></li>
+					<li><a data-goto=".team-goto" href="#" class="menu__link">Команда</a></li>
+					<li><a data-goto=".contacts-goto" href="#" class="menu__link">Контакты</a></li>
 					</li>
 				</ul>
 			</nav>
@@ -72,7 +72,7 @@
 			</div>
 			<div class="banner">
 			</div>
-			<div class="slider">
+			<div class="slider services-goto">
 	<div class="container">
 		<h2 class="slider__title">Мы готовы помочь</h2>
 		<div class="slider__bg"></div>
@@ -111,7 +111,7 @@
 		<div class="swiper-button-next"></div>
 	</div>
 </div>
-			<div class="skills">
+			<div class="skills skills-goto" >
 	<div class="container">
 		<h2 class="skills__title">Наша экспертность</h2>
 		<div class="skills__info">
@@ -149,7 +149,7 @@
 		</div>
 	</div>
 </div>
-			<div class="advantage">
+			<div class="advantage advantage-goto">
 	<div class="advantage__bg"></div>
 	<div class="container">
 		<div class="advantage__title">
@@ -193,38 +193,38 @@
 		<h2 class="clients__title">Клиенты</h2>
 		<p class="clients__desc">Нашими услугами уже пользуются крупнейшие организаторы мероприятий Китая, России и Восточной Европы, включая Canton Fair, UBM, VNU, HKTDC, SIEC. Общий оборот текущих клиентов составляет более $2 млрд. в год.</p>
 		<div class="clients__logo">
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
 		</div>
 	</div>
 </div>
-<div class="clients">
+<div class="clients partners-goto">
 	<div class="container">
 		<h2 class="clients__title">Партнеры</h2>
 		<p class="clients__desc">Привлечь ещё больше посетителей на мероприятия поможет сеть партнёров Biletum.</p>
 		<div class="clients__logo">
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
 		</div>
 	</div>
 </div>
@@ -233,25 +233,25 @@
 		<h2 class="clients__title">Технические партнеры</h2>
 		<p class="clients__desc">Наши партнеры обеспечат техническую поддержку онлайн<br> и гибридных мероприятий любого масштаба.</p>
 		<div class="clients__logo">
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div class="client"><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
+			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
 		</div>
 	</div>
 </div>
 
 			<div class="reviews">
 	<div class="container reviews-container">
-		<div class="reviews__title">Клиенты</div>
+		<div class="reviews__title">Отзывы</div>
 		<div class="reviews-button">
 			<div class="swiper-button-next"></div>
 			<div class="swiper-button-prev"></div>
@@ -312,7 +312,7 @@
 
 
 </div>
-			<div class="team">
+			<div class="team team-goto">
 	<div class="team__bg">
 		<div class="container">
 			<h2 class="team__title">Команда</h2>
@@ -403,7 +403,50 @@
 		</div>
 	</div>
 </div>
+			<div class="cta">
+	<div class="container cta__bg">
+		<div class="cta__wrapper">
+			<p class="cta__conversion">Увеличьте конверсию в <span>10 раз</span></p>
+			<p class="cta__source">с минимальными затратами ресурсов</p>
+		</div>
+	</div>
+	<div class="container">
+		<div class="cta__btn-group">
+			<div class="cta__sale">
+				<a href="https://ticketforevent.com/ru/biletnyiy-servis-dlya-organizatorov-meropriyatiy" class="btn btn-sale">Хочу продавать билеты</a>
+			</div>
+			<div class="cta__img">
+				<img src="./img/arrow2.png" alt="">
+			</div>
+			<div class="cta__promo">
+				<a href="https://expopromoter.com/organizers/" class="btn btn-promo">Хочу привлекать посетителей</a>
+			</div>
+		</div>
+	</div>
+</div>
 		</main>
+		<footer class="footer contacts-goto">
+	<div class="container footer__bg">
+		<div class="footer-wrapper">
+			<div class="footer__item">
+				<div class="footer__country">Украина</div>
+				<div class="footer__address">Киев<br>ул. Казимира Малевича 86-Л, 2-й этаж</div>
+			</div>
+			<div class="footer__item">
+				<div class="footer__country">Россия</div>
+				<div class="footer__address"> Москва <br> ул. Летниковская 10, строение 1, 7-й этаж</div>
+			</div>
+			<div class="footer__item">
+				<div class="footer__country">Китай</div>
+				<div class="footer__address"> Шанхай<br> р-н. 2115, 21F, East Ocean Centre Phase, № 618 East Yan An Road</div>
+			</div>
+			<div class="footer__item">
+				<div class="footer__country">Великобритания</div>
+				<div class="footer__address">Лондон<br> ул. Джона Принца 13, 2-й этаж</div>
+			</div>
+		</div>
+	</div>
+</footer>
 	</div>
 	 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 	 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
