Mobile version DONE

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="swiper-button-prev"></div>
-		<div class="swiper-button-next"></div>
+		<div class="swiper-button-prev slider-prev"></div>
+		<div class="swiper-button-next slider-next"></div>
 	</div>
 </div>
 			<div class="skills skills-goto" >
@@ -132,7 +132,7 @@
 		<div class="skills__info">
 			<div class="skills-tiket">
 				<div class="skills__logo">
-					<img src="./img/logo-tiket.png" width="300" alt="">
+					<img class="responsive" src="./img/logo-tiket.png"  alt="">
 				</div>
 				<h4 class="skills__date">2011-2020 гг. </h4>
 				<div class="skills__list">
@@ -149,7 +149,7 @@
 			</div>
 			<div class="skills-expo">
 				<div class="skills__logo">
-					<img src="./img/logo-expo.jpg" width="290" alt="">
+					<img class="responsive" src="./img/logo-expo.jpg" alt="">
 				</div>
 				<h4 class="skills__date">2015-2020 гг. </h4>
 				<div class="skills__list">
@@ -207,7 +207,6 @@
 	<div class="container clients__bg">
 		<h2 class="clients__title">Клиенты</h2>
 		<p class="clients__desc">Нашими услугами уже пользуются крупнейшие организаторы мероприятий Китая, России и Восточной Европы, включая Canton Fair, UBM, VNU, HKTDC, SIEC. Общий оборот текущих клиентов составляет более $2 млрд. в год.</p>
-		<div class="clients__logo">
 			<ul class="partners">
 				<li class="partners__item"><img src="./img/clients/Beijing Hiven Exhibition.jpg" alt=""></li>
 				<li class="partners__item"><img src="./img/clients/China Kids Expo.png" alt=""></li>
@@ -231,14 +230,12 @@
 				<li class="partners__item"><img src="./img/clients/Zhenwei Exhibition Group.png" alt=""></li>
 				<li class="partners__item"><img src="./img/clients/zmexpo logo.png" alt=""></li>
 			</ul>
-		</div>
 	</div>
 </div>
 <div class="clients partners-goto">
 	<div class="container">
 		<h2 class="clients__title">Партнеры</h2>
 		<p class="clients__desc">Привлечь ещё больше посетителей на мероприятия поможет сеть партнёров Biletum.</p>
-		<div class="clients__logo">
 			<ul class="partners">
 				<li class="partners__item"><img src="./img/partners/b2bexport_logo.png" alt=""></li>
 				<li class="partners__item"><img src="./img/partners/dynamic group логотип.jpg" alt=""></li>
@@ -253,27 +250,19 @@
 				<li class="partners__item"><img src="./img/partners/Китайский компот.png" alt=""></li>
 				<li class="partners__item"><img src="./img/partners/ЛАОВАЙ.РУ.png" alt=""></li>
 			</ul>
-		</div>
 	</div>
 </div>
 <div class="clients">
 	<div class="container">
 		<h2 class="clients__title">Технические партнеры</h2>
 		<p class="clients__desc">Наши партнеры обеспечат техническую поддержку онлайн<br> и гибридных мероприятий любого масштаба.</p>
-		<div class="clients__logo">
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-			<div><a href="#"><img src="./img/logo_fake.png", width="224" alt="logo"></a></div>
-		</div>
+		 	<ul class="partners">
+				<li class="partners__item"><img src="./img/partners-tech/ew_logo_purple_blue 1.jpg" alt=""></li>
+				<li class="partners__item"><img src="./img/partners-tech/logo 2.jpg" alt=""></li>
+				<li class="partners__item"><img src="./img/partners-tech/download 1.jpg" alt=""></li>
+				<li class="partners__item"><img src="./img/partners-tech/image 8.jpg" alt=""></li>
+				<li class="partners__item"><img src="./img/partners-tech/91616699_1930094417115333_4094669421681836032_n 1.png" alt=""></li>
+			</ul>
 	</div>
 </div>
 
