Added section CTA + fixed slider autoplay

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="site-container">
 		<header class="header">
 	<div class="header__container container">
-		<a href="#" class="header__logo">
+		<a href="/" class="header__logo">
 			<img src="img/logo.png" width="164" alt="Biletum">
 		</a>
 		<div class="header__menu">
@@ -69,14 +69,6 @@
 					<div class="experience">EXPerience</div>
 					<div class="lng-decs">
 						Biletum — инновационная экосистема сервисов и платформ для организации бизнес-мероприятий любого масштаба и формата проведения
-					</div>
-				</div>
-				<div class="title-btn">
-					<div>
-						<a href="https://ticketforevent.com/ru/biletnyiy-servis-dlya-organizatorov-meropriyatiy" class="btn lng-btn-sale">Хочу продавать билеты</a>
-					</div>
-					<div>
-						<a href="https://expopromoter.com/organizers/" class="btn lng-btn-promo">Хочу привлекать посетителей</a>
 					</div>
 				</div>
 			</div>
@@ -416,13 +408,33 @@
 		</div>
 	</div>
 </div>
-			
+			<div class="cta">
+	<div class="container cta__bg">
+		<div class="cta__wrapper lng-cta__wrapper">
+			<p class="cta__conversion">Увеличьте конверсию в <span>10 раз</span></p>
+			<p class="cta__source">с минимальными затратами ресурсов</p>
+		</div>
+	</div>
+	<div class="container">
+		<div class="cta__btn-group">
+			<div class="cta__sale">
+				<a href="https://ticketforevent.com/ru/biletnyiy-servis-dlya-organizatorov-meropriyatiy" class="btn lng-btn-sale">Хочу продавать билеты</a>
+			</div>
+			<div class="cta__img">
+				<img src="./img/arrow2.png" alt="">
+			</div>
+			<div class="cta__promo">
+				<a href="https://expopromoter.com/organizers/" class="btn lng-btn-promo">Хочу привлекать посетителей</a>
+			</div>
+		</div>
+	</div>
+</div>
 		</main>
 		<footer class="footer contacts-goto">
 	<div class="container footer__bg">
 		<div class="footer-wrapper">
 			<div class="footer__item lng-footer__item1">
-				<div class="footer__country">Украина,</div>
+				<div class="footer__country">Украина</div>
 				<div class="footer__address">Киев<br>ул. Казимира Малевича 86-Л, 2-й этаж</div>
 			</div>
 			<div class="footer__item lng-footer__item2">
