Fixed text bugs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="header__menu">
 			<nav class="menu__body">
 				<ul class="lng-menu__list">
-					<li data-goto=".skills-goto" class="menu__link" >Biletium</li>
+					<li data-goto=".skills-goto" class="menu__link" >Biletum</li>
 					<li data-goto=".services-goto" class="menu__link">Услуги</li>
 					<li data-goto=".partners-goto" class="menu__link">Партнеры</li>
 					<li data-goto=".advantage-goto" class="menu__link">Преимущества</li>
@@ -68,7 +68,7 @@
 					<div class="wow">WOW!!</div>
 					<div class="experience">EXPerience</div>
 					<div class="lng-decs">
-						Biletum — инновационная экосистема сервисов и платформ для организации бизнес-мероприятий любого масштаба и формата проведения
+						Biletum — инновационная экосистема сервисов и&nbsp;платформ для организации бизнес-мероприятий любого масштаба и формата проведения.
 					</div>
 				</div>
 			</div>
@@ -82,10 +82,10 @@
 		<div class="swiper-wrapper">
 			<div class="swiper-slide slider__item">
 				<div class="slider__text lng-slider__text1">
-					<h3>Продажа билетов и экспо-стендов:</h3>
-					<p>Автоматизация процесса регистрации и продаж	</p>
-					<p>Единое диджитал пространство для работы внутреннего отдела продаж и партнеров</p>
-					<p>Полный спектр маркетинговых инструментов для увеличения конверсии и продаж</p>
+					<h3>Продажа билетов и&nbsp;экспо-стендов:</h3>
+					<p>Автоматизация процесса регистрации и продаж;</p>
+					<p>Единое диджитал пространство для работы внутреннего отдела продаж и партнеров;</p>
+					<p>Полный спектр маркетинговых инструментов для увеличения конверсии и продаж.</p>
 				</div>
 				<div>
 					<a href="https://ticketforevent.com/ru/biletnyiy-servis-dlya-organizatorov-meropriyatiy/" class="btn btn-orange lng-btn-orange">Узнать подробнее</a>
@@ -93,10 +93,10 @@
 			</div>
 			<div class="swiper-slide slider__item">
 				<div class="slider__text lng-slider__text2">
-					<h3>Дистрибуция билетов и экспо-стендов:</h3>
-					<p>Автоматизация управления продажами агентов и партнеров</p>
-					<p>Дистрибуция в сети Biletum - 12 978 партнеров в 86 странах мира</p>
-					<p>Привлечение покупателей из аудитории Biletum - более 10 млн. пользователей</p>
+					<h3>Дистрибуция билетов и&nbsp;экспо-стендов:</h3>
+					<p>Автоматизация управления продажами агентов и партнеров;</p>
+					<p>Дистрибуция в сети Biletum — 12 978 партнеров в 86 странах мира;</p>
+					<p>Привлечение покупателей из аудитории Biletum — более 10 млн пользователей.</p>
 				</div>
 				<div>
 					<a href="https://expopromoter.com/organizers/" class="btn btn-orange lng-btn-orange2">Узнать подробнее</a>
@@ -104,10 +104,10 @@
 			</div>
 			<div class="swiper-slide slider__item">
 				<div class="slider__text lng-slider__text3">
-					<h3>Платформы для проведения мероприятий:</h3>
-					<p>Интеграция с 5 платформами для любого формата проведения мероприятий</p>
-					<p>Полная автоматизация передачи данных с платформами</p>
-					<p>Автоматическое создание мобильного приложения мероприятия</p>
+					<h3>Платформы для&nbsp;проведения мероприятий:</h3>
+					<p>Интеграция с 5 платформами для любого формата проведения мероприятий;</p>
+					<p>Полная автоматизация передачи данных с&nbsp;платформами;</p>
+					<p>Автоматическое создание мобильного приложения мероприятия.</p>
 				</div>
 				<div>
 					<a href="https://expopromoter.com" class="btn btn-orange lng-btn-orange3">Узнать подробнее</a>
@@ -126,13 +126,13 @@
 				<div class="skills__logo">
 					<img class="responsive" src="./img/logo-tiket.png"  alt="">
 				</div>
-				<h4 class="skills__date">2011-2020 гг. </h4>
+				<h4 class="skills__date">2011—2020 .. </h4>
 				<div class="skills__list">
 					<ul class="lng-skills__list">
-						<li>Топ-3 платформа по продаже билетов в Восточной Европе;</li>
-						<li>Лучший стартап года по версии The Next Web;</li>
+						<li>Топ-3 платформа по продаже билетов в&nbsp;Восточной Европе;</li>
+						<li>Лучший стартап года по версии The&nbsp;Next&nbsp;Web;</li>
 						<li>#6 в Топ-50 стартапов года согласно рейтингу «Коммерсантъ»;</li>
-						<li>Гран-при ежегодной премии «Облака»</li>
+						<li>Гран-при ежегодной премии «Облака».</li>
 					</ul>
 				</div>
 			</div>
@@ -143,13 +143,13 @@
 				<div class="skills__logo">
 					<img class="responsive" src="./img/logo-expo.jpg" alt="">
 				</div>
-				<h4 class="skills__date">2015-2020 гг. </h4>
+				<h4 class="skills__date">2015—2020 .. </h4>
 				<div class="skills__list">
 					<ul class="lng-skills__list2">
-						<li>Топ-10 зарубежных IT-компаний, которые успешно вышли на китайский рынок по версии RISE;</li>
+						<li>Топ-10 зарубежных IT-компаний, которые успешно вышли на китайский рынок по&nbsp;версии RISE;</li>
 						<li>Крупнейшая платформа для дистрибуции билетов и стендов на выставки Китая;</li>
 						<li>Эксклюзивный дистрибьютор на крупнейшие мероприятия, включая Шанхайский автосалон;</li>
-						<li>Внеконкурсный участник программы Chinaccelerator (SOSV)</li>
+						<li>Внеконкурсный участник программы Chinaccelerator (SOSV).</li>
 					</ul>
 				</div>
 			</div>
@@ -168,7 +168,7 @@
 		</div>
 		<div class="advantage__cards">
 			<div class="card">
-				<div class="card__icon"><span class="lng-card__span1">от</span> 27%</div>
+				<div class="card__icon"><span class="lng-card__span1">от</span> 27&nbsp;%</div>
 				<div class="card__desc lng-card__desc1">Обеспечиваем реальный рост продаж билетов и экспо-стендов</div>
 			</div>
 			<div class="card">
@@ -181,11 +181,11 @@
 			</div>
 			<div class="card">
 				<div class="card__icon"><img src="./img/arrow.svg" width="108"></div>
-				<div class="card__desc lng-card__desc4">Обеспечиваем прием оплат за билеты и экспо-стенды сразу на счет организатора</div>
+				<div class="card__desc lng-card__desc4">Обеспечиваем прием оплат за билеты и&nbsp;экспо-стенды сразу на счет организатора</div>
 			</div>
 			<div class="card">
 				<div class="card__icon"><img src="./img/map.svg" width="96"></div>
-				<div class="card__desc lng-card__desc5">Охватываем самый большой рынок по гео охвату и емкости</div>
+				<div class="card__desc lng-card__desc5">Охватываем самый большой рынок по&nbsp;гео охвату и емкости</div>
 			</div>
 			<div class="card">
 				<div class="card__icon"><img src="./img/grid.svg" width="87"></div>
@@ -435,19 +435,19 @@
 		<div class="footer-wrapper">
 			<div class="footer__item lng-footer__item1">
 				<div class="footer__country">Украина</div>
-				<div class="footer__address">Киев<br>ул. Казимира Малевича 86-Л, 2-й этаж</div>
+				<div class="footer__address">Киев,<br>ул. Казимира Малевича, 86-Л, 2-й&nbsp;этаж</div>
 			</div>
 			<div class="footer__item lng-footer__item2">
 				<div class="footer__country">Россия</div>
-				<div class="footer__address"> Москва <br> ул. Летниковская 10,<br> строение 1, 7-й этаж</div>
+				<div class="footer__address"> Москва,<br> ул. Летниковская, 10,<br> строение 1, 7-й&nbsp;этаж</div>
 			</div>
 			<div class="footer__item lng-footer__item3">
 				<div class="footer__country">Китай</div>
-				<div class="footer__address"> Шанхай<br> р-н. 2115, 21F, East Ocean Centre Phase, № 618 East Yan An Road</div>
+				<div class="footer__address"> Шанхай,<br> р-н. 2115, 21F, East Ocean Centre Phase, № 618 East Yan An Road</div>
 			</div>
 			<div class="footer__item lng-footer__item4">
 				<div class="footer__country">Великобритания</div>
-				<div class="footer__address">Лондон<br> ул. Джона Принца 13, 2-й этаж</div>
+				<div class="footer__address">Лондон,<br> ул. Джона Принца, 13, 2-й&nbsp;этаж</div>
 			</div>
 		</div>
 	</div>
