final fixed text

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="skills__logo">
 					<img class="responsive" src="./img/logo-tiket.png"  alt="">
 				</div>
-				<h4 class="skills__date">2011—2020 .. </h4>
+				<h4 class="skills__date">2011—2020</h4>
 				<div class="skills__list">
 					<ul class="lng-skills__list">
 						<li>Топ-3 платформа по продаже билетов в&nbsp;Восточной Европе;</li>
@@ -143,7 +143,7 @@
 				<div class="skills__logo">
 					<img class="responsive" src="./img/logo-expo.jpg" alt="">
 				</div>
-				<h4 class="skills__date">2015—2020 .. </h4>
+				<h4 class="skills__date">2015—2020</h4>
 				<div class="skills__list">
 					<ul class="lng-skills__list2">
 						<li>Топ-10 зарубежных IT-компаний, которые успешно вышли на китайский рынок по&nbsp;версии RISE;</li>
@@ -227,7 +227,7 @@
 <div class="clients partners-goto">
 	<div class="container lng-partners">
 		<h2 class="clients__title">Партнеры</h2>
-		<p class="clients__desc">Привлечь ещё больше посетителей на мероприятия поможет сеть партнёров Biletum.</p>
+		<p class="clients__desc">Привлечь ещё больше посетителей на мероприятия поможет сеть партнёров Biletum – 12 000 контактов по всему миру.</p>
 			<ul class="partners">
 				<li class="partners__item"><img src="./img/partners/b2bexport_logo.png" alt=""></li>
 				<li class="partners__item"><img src="./img/partners/dynamic group логотип.jpg" alt=""></li>
@@ -357,7 +357,15 @@
 						<span>Managing Director (Europe)</span>
 					</div>
 				</a>
-
+				<a href="https://www.linkedin.com/in/diana-ziletskaya-659961a9" class="card">
+					<div class="card__photo">
+						<img class="responsive" src="./img/Diana-Ziletska.jpg" alt="Volodymyr Oleynyk">
+					</div>
+					<div class="card__info lng-team-card7">
+						<p>Диана Зилецкая</p>
+						<span>Business Development Director (Ukraine)</span>
+					</div>
+				</a>
 				<a href="https://ua.linkedin.com/in/yury-timoschuk-b895246" class="card">
 					<div class="card__photo">
 						<img class="responsive" src="./img/yury-timoschuk.jpg" alt="Yury Timoschuk">
@@ -386,22 +394,14 @@
 						<span>Business Development Director (Russia)</span>
 					</div>
 				</a>
-				<a href="https://www.linkedin.com/in/oleynikov88" class="card">
-					<div class="card__photo">
-						<img class="responsive" src="./img/VolodymyrOleynyk.jpg" alt="Volodymyr Oleynyk">
-					</div>
-					<div class="card__info lng-team-card7">
-						<p>Владимир Олейников</p>
-						<span>Business Development Director (Ukraine)</span>
-					</div>
-				</a>
+
 				<a href="#" class="card">
 						<div class="card__photo">
 							<img class="responsive" src="./img/EmmaZhang.jpg" alt="Emma Zhang">
 						</div>
 						<div class="card__info lng-team-card8">
 							<p>Эмма Джанг</p>
-							<span>Business Development Manager (Asia)</span>
+							<span>Business Development Director (Asia)</span>
 						</div>
 				</a>
 			</div>
@@ -433,21 +433,21 @@
 		<footer class="footer contacts-goto">
 	<div class="container footer__bg">
 		<div class="footer-wrapper">
-			<div class="footer__item lng-footer__item1">
-				<div class="footer__country">Украина</div>
-				<div class="footer__address">Киев,<br>ул. Казимира Малевича, 86-Л, 2-й&nbsp;этаж</div>
-			</div>
-			<div class="footer__item lng-footer__item2">
-				<div class="footer__country">Россия</div>
-				<div class="footer__address"> Москва,<br> ул. Летниковская, 10,<br> строение 1, 7-й&nbsp;этаж</div>
+			<div class="footer__item lng-footer__item4">
+				<div class="footer__country">Великобритания</div>
+				<div class="footer__address">Лондон,<br> ул. Джона Принца, 13, <br>2-й&nbsp;этаж</div>
 			</div>
 			<div class="footer__item lng-footer__item3">
 				<div class="footer__country">Китай</div>
 				<div class="footer__address"> Шанхай,<br> р-н. 2115, 21F, East Ocean Centre Phase, № 618 East Yan An Road</div>
 			</div>
-			<div class="footer__item lng-footer__item4">
-				<div class="footer__country">Великобритания</div>
-				<div class="footer__address">Лондон,<br> ул. Джона Принца, 13, 2-й&nbsp;этаж</div>
+			<div class="footer__item lng-footer__item2">
+				<div class="footer__country">Россия</div>
+				<div class="footer__address"> Москва,<br> ул. Летниковская, 10,<br> строение 1, 7-й&nbsp;этаж</div>
+			</div>
+			<div class="footer__item lng-footer__item1">
+				<div class="footer__country">Украина</div>
+				<div class="footer__address">Киев,<br>ул. Казимира Малевича, 86-Л, 2-й&nbsp;этаж</div>
 			</div>
 		</div>
 	</div>
