--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 					</div>
 					<div class="card__info lng-team-card7">
 						<p>Диана Зилецкая</p>
-						<span>Business Development Director (Ukraine)</span>
+						<span>Chief Marketing Officer (Europe, Asia)</span>
 					</div>
 				</a>
 				<a href="https://ua.linkedin.com/in/yury-timoschuk-b895246" class="card">
@@ -391,7 +391,7 @@
 					</div>
 					<div class="card__info lng-team-card6">
 						<p>Святослав Алёхин</p>
-						<span>Business Development Director (Russia)</span>
+						<span>Business Development Director (Europe)</span>
 					</div>
 				</a>
 
@@ -443,11 +443,11 @@
 			</div>
 			<div class="footer__item lng-footer__item2">
 				<div class="footer__country">Россия</div>
-				<div class="footer__address"> Москва,<br> ул. Летниковская, 10,<br> строение 1, 7-й&nbsp;этаж</div>
+				<div class="footer__address"> Москва,<br> ул. Летниковская, 10, строение 1, <br>7-й&nbsp;этаж</div>
 			</div>
 			<div class="footer__item lng-footer__item1">
 				<div class="footer__country">Украина</div>
-				<div class="footer__address">Киев,<br>ул. Казимира Малевича, 86-Л, 2-й&nbsp;этаж</div>
+				<div class="footer__address">Киев,<br>ул. Казимира Малевича, 86-Л, <br>2-й&nbsp;этаж</div>
 			</div>
 		</div>
 	</div>
