Added block Magic2 for mobile

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 						<li>Эксклюзивный дистрибьютор на крупнейшие мероприятия, включая Шанхайский автосалон;</li>
 						<li>Внеконкурсный участник программы Chinaccelerator (SOSV).</li>
 					</ul>
+					<div class="skills__magicImg"><img src="./img/magic-biletum.jpg"  alt=""></div>
 				</div>
 			</div>
 		</div>
