google tag manager added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
 	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.min.css">
 	<title>Платформа для организации бизнес-мероприятий - Biletum</title>
+ 
+ <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.j...efore(j,f);
+})(window,document,'script','dataLayer','GTM-TB552MQ');</script>
+<!-- End Google Tag Manager -->
+ 
 </head>
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.ht...552MQ";
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 	<div class="site-container">
 		<header class="header">
 	<div class="header__container container">
